# Tracking-PC

./: .gitignore  CNAME  Dockerfile  Dockerfile.api  Dockerfile.front  README.md  pyproject.toml  script.py
front/: Documentation.py  track_challenge_front.py
front/pages/: 1_Create_Track_Information.py  2_Show_Track_Information.py
src/: app.py  pyproject.toml
src/track/: containers.py
src/track/endpoints/: base_use_case.py
src/track/endpoints/track_events/: controllers.py  schemas.py
src/track/endpoints/track_events/use_cases/: get_track_events.py  track_event.py
src/track/infrastructure/database/: mongo.py
src/track/infrastructure/repositories/: mongo_repository.py
src/track/model/: track_event_model.py
src/track/repositories/: track_event_repository.py
src/track/services/: get_track_events_service.py  track_event_service.py
